--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
   padding: 0;
 }
 body {
-  background: #2b2b2a;
+  background: #ebeb06;
   height: 100vh;
   font-family: "Roboto Mono", monospace;
 }
@@ -19,8 +19,8 @@ body {
 }
 
 h1 {
-  color: #c3c3c3;
-  font-weight: 700;
+  color: #f50000;
+  font-weight: 1000;
   font-size: 2.5rem;
   letter-spacing:0.2rem;
 }
