--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
   padding: 0;
 }
 body {
-  background: #ebeb06;
+  background: #ffff69;
   height: 100vh;
   font-family: "Roboto Mono", monospace;
 }
