--- a/style.css
+++ b/style.css
@@ -19,14 +19,14 @@ body {
 }
 
 h1 {
-  color: #f50000;
+  color: #000000;
   font-weight: 1000;
   font-size: 2.5rem;
   letter-spacing:0.2rem;
 }
 
 span {
-  color: #c3c3c3;
+  color: #ff0000;
   font-weight: 400;
   font-size: 0.85rem;
 }
